# ebase

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SKILL.md  claude_desktop_config.json.example  install.sh  pyproject.toml  skills  uninstall.sh  uv_test.py
.github/workflows/: ci.yml  release.yml
cron/: __init__.py  connection_sync_sweep.py  conversation_plan_sweep.py  routine_backoff.py  routine_scheduler.py  routines_config.py  server.py  skill_runner.py  status_report.py  system_status.py
docs/: architecture.md  conversation-planner.md  install.md  linkedin-outreach-workflow.html  linkedin-outreach-workflow.mermaid  operations.md  quickstart.md  skills.md  web-dashboard.md
docs/designs/: outreach-workflow-regression-tests-design.md  per-connection-routines-with-backoff-design.md  schedule-meeting-mcp-and-regression-design.md  team-rollout-design.md
docs/stitch/: dashboard-main.html  dashboard-meetings.html  dashboard-routine.html
outreach/: browser.py  data_paths.py  planner.py  worker.py
outreach/config/: conversation_planner.json  conversation_planner.json.example  dashboard_routines.json.example
outreach/schemas/: conversation.schema.json  prospect.schema.json
skills/conversation-planner/: SKILL.md
testing/: Makefile  README.md
testing/docs/: web-dashboard.md
testing/outreach/: regression_harness.py
testing/tests/: conftest.py  test_auth_check.py  test_connection_request_verify.py  test_connection_sync_signals.py  test_connection_sync_sweep.py  (+15 more)
tests/: test_connection_sync_sweep.py  test_conversation_plan_sweep.py  test_conversation_planner.py  test_dashboard_api.py  test_mock_fixtures.py  test_rate_limits.py  test_regression_workflow.py  test_routines_config.py  test_schedule_meeting.py
tools/: mock.py  notify.py  rate_limits.py  server.py  setup_tone_examples.py
web/: app.js  connection_sync_sweep.py  conversation_plan_sweep.py  dashboard.css  dashboard.html  dashboard.js  dashboard_data.py  index.html  mock_conversation.py  routine_backoff.py  routine_scheduler.py  routines_config.py  server.py  skill_runner.py  styles.css
(+36 files in other folders)
