[project]
name = "linkedin-outreach"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "certifi",
    "fastapi>=0.115.0",
    "ipython>=8.39.0",
    "mcp[cli]>=1.0.0",
    "playwright>=1.40.0",
    "uvicorn[standard]>=0.32.0",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-asyncio",
]
