[project]
name = "ebase"
version = "1.0.0"
description = "LinkedIn recruiting outreach that runs inside Claude Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "embeddingvc" },
]
keywords = ["linkedin", "outreach", "recruiting", "mcp", "claude-code", "playwright"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
]

[project.urls]
Homepage = "https://github.com/embeddingvc/ebase"
Repository = "https://github.com/embeddingvc/ebase"
Issues = "https://github.com/embeddingvc/ebase/issues"
Changelog = "https://github.com/embeddingvc/ebase/blob/main/CHANGELOG.md"

dependencies = [
    "certifi",
    "fastapi>=0.115.0",
    "ipython>=8.39.0",
    "mcp[cli]>=1.0.0",
    "playwright>=1.40.0",
    "uvicorn[standard]>=0.32.0",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
markers = [
    "local_regression: needs `claude` CLI + auth; mock workflow loop (not for headless CI)",
]
